[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Weapons/assets/playerbullet.png" type="Texture" id=1]
[ext_resource path="res://src/Weapons/Player_bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.5, 10 )

[node name="Bullet" type="Area2D"]
scale = Vector2( 2, 1 )
collision_layer = 64
collision_mask = 61444
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.5, 0 )
scale = Vector2( 0.25, 1 )

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
